--- a/index.html
+++ b/index.html
@@ -34,6 +34,25 @@
 
 </div>
 </div>
+<div id="overview">
+    <h2>Приемущества</h2>   
+    <h4>С нами все проще</h4>
+    <div class="img">
+    <img src="https://itproger.com/img/courses/1534335030.jpg" alt="">  
+    <span>Изучение языка Ruby для начинающих</span>
+ </div>
+ <div class="img">
+<img src="https://84.img.avito.st/640x480/5823740584.jpg" alt="">
+<span>Уроки PhotoShop для начинающих</span>
+ </div>
+ <div class="img">
+     <img src="https://media.proglib.io/wp-uploads/2017/01/swift-og-copy.png" alt="">
+     <span>Уроки Swift для начинающих</span>
+</div>
+<div class="img">
+<img src="https://udemy-images.udemy.com/course/750x422/507888_17b7_2.jpg" alt="">
+</div>
+</div>
 
 
 
